# wiztoolkit-ocaml-bindings

./: README.md  dune-project  wiztoolkit.opam
lib/: bindings.ml  bindings.mli  dune  set_flags.ml  types.ml
lib/wiztoolkit_as_C_lib/: Makefile_linux  Makefile_macosx  bindings.cpp  bindings.h
test/: dune
